# red-team-tooling

./: .llm-compliance.yml  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-internal.md  CONTRIBUTORS.md  Cargo.toml  FPP-5.1-2026Q1-final.txt  LICENSE.md  MIGRATION.md  OPSEC.md  README.md  SECURITY.md  SECURITY_CLASSIFICATION.md  THREAT_MODEL.md  build.rs  defensive-roadmap.md  directive.sha256  environment_lock.json  mailmap.txt  mandate.sha256  research-references.md  rust-toolchain.toml  simulation-harness.md  threat-model.md  verify_authority
.github/: NCDD_SECURITY_POLICY.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  config.yml  enhancement.md  feature_request.md
.github/workflows/: adversarial_test.yml
adversarial-calibration/: Cargo.toml
adversarial-calibration/src/charlotte/: calibration.rs
ai-false-positive-reduction/: Cargo.toml
ai-false-positive-reduction/src/: framework.rs  lib.rs
attack-v19-coverage/: Cargo.toml
attack-v19-coverage/src/: lib.rs
beacon-core/: Cargo.toml  build.rs
beacon-core/feat/: advanced-beacon
beacon-core/src/: beacon.asm  lib.rs  rotation.rs
beacon-core/src/beacon-core/src/: lib.rs
continuous-monitoring/: Cargo.toml
continuous-monitoring/src/: lib.rs
credential-access-op/: Cargo.toml
credential-access-op/src/: decrypt.rs  discord.rs  dpapi.rs  exfil.rs  kerberos.rs  lib.rs  lsass.rs
credential-access-op/tests/: test_credential_op.rs
detection-rules/: fenrir_beacon.yara
docs/: ncdd-code-signing.asc  technical-reference.md
docs/hr/: new-hire-checklist.md  offer-letter-template.md  security-clearance-form.md
docs/incident-response/: T1562.006-detection.md
docs/llm-logs/: 2026-02-17-claude-session.md
docs/reviews/: Q1-2026-review.md
docs/security/: known-issues.md
docs/threat-intel/: APT-FENRIR-2026Q1.md
docs/training/: intro-to-invariants.md
edr-evasion/: Cargo.toml
edr-evasion/src/: advanced_etw_amsi_bypass.rs  amsi_bypass.rs  etw_patch.rs  etw_tamper.rs  kernel_unhook.rs  lib.rs  mod.rs  structural_invariants.rs
edr-evasion/src/edr-evasion/src/: etw_patch_sim.rs
edr-evasion/tests/: mod.rs  test_amsi_bypass.rs  test_etw_patch.rs
exfil-channels/: Cargo.toml
exfil-channels/src/: channel.rs  dns_exfil.rs  dns_over_https.asm  dns_tunnel.rs  dns_txt_chunked.rs  fronting.rs  icmp_fallback.asm  icmp_tunnel.rs  ja3_generator.rs  lib.rs  tls_config.rs  tls_tunnel.rs
exfil-channels/tests/: test_tls.rs
loader-stubs/: Cargo.toml
loader-stubs/src/: lib.rs  loader.cs  main.rs  process_hollowing.rs  reflective_loader.asm  reflective_pe_loader.rs  reflective_sim.rs
nsm_redtool/: config.yaml  response_analyzer.py  stealth_browser.py  utils.py
nsm_redtool/llm-assessment-framework/: .env.example  README.md  config.py  main.py  payload_generator.py  requirements.txt  response_analyzer.py  stealth_browser.py  utils.py
releases/: README.md  SHA256SUMS  SHA256SUMS.asc
sigma-eval/: BLAKE3_MANIFEST.txt  Cargo.toml  README.md
sigma-eval/examples/: eval_timeline.rs
sigma-eval/src/: lib.rs  matcher.rs  parser.rs  sequence.rs
sigma-eval/src/render/: json.rs  mod.rs
sigma-evaluator/: Cargo.toml  README.md
sigma-evaluator/examples/: eval_timeline.rs
sigma-evaluator/src/: lib.rs  markers.rs  matcher.rs  parser.rs
telemetry-core/: Cargo.toml
telemetry-core/src/: lib.rs
tests/: evasion_tests.rs  test_full_chain.rs
tests/integration/: test_full_chain.rs
tests/unit/: test_etw_patch.rs
timeline-builder/: Cargo.toml  README.md
timeline-builder/examples/: build_timeline.rs
timeline-builder/src/: correlate.rs  lib.rs  markers.rs  model.rs  time.rs
timeline-builder/src/render/: json.rs  markdown.rs  mod.rs  xml.rs
timeline-builder/src/scenarios/: mod.rs  t1003_001_lsass.rs  t1040_network_discovery.rs  t1059_001_encoded.rs
uefi-bootkit/: EfiGuard.dsc  EfiGuard.fdf  README.md  build.bat
uefi-bootkit-authorization/: NSM-FSRB-20260217-001.pdf.md  README.md  containment-plan.md  hardware-inventory.csv  risk-assessment.md
uefi-bootkit-authorization/references/: FSP-2026-004-UEFI-Development.txt  NSM-Directive-2026-02-§4.2.4.txt
uefi-bootkit-authorization/verification/: signatures.txt
uefi-bootkit/EfiGuardPkg/: EfiGuardPkg.dec
uefi-bootkit/EfiGuardPkg/EfiGuardDxe/: BootManagerPatcher.c  Crypto.c  EfiGuardDxe.c  EfiGuardDxe.inf  KernelPatcher.c  Memory.c  Payload.c  Protocol.h  RuntimeServices.c  WinloadPatcher.c  Zydis.h
uefi-bootkit/EfiGuardPkg/KernelPayload/: KernelPayload.c  KernelPayload.inf
uefi-bootkit/EfiGuardPkg/Loader/: Loader.c  Loader.inf
uefi-bootkit/asm/: persistence.asm
winlog-synth/: Cargo.toml
winlog-synth/src/: lib.rs
