[workspace]
resolver = "2"
members = [
    "beacon-core",
    "edr-evasion",
    "exfil-channels",
    "loader-stubs",
    "adversarial-calibration",
    "ai-false-positive-reduction",
    "attack-v19-coverage",
    "continuous-monitoring",
]

[workspace.package]
version = "0.1.0"
authors = ["NSM Red Cell <ops@NSM.no>"]
edition = "2021"

[workspace.dependencies]
# Shared dependencies for consistency
windows-sys = "0.48"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



