# STRENGT FORTROLIG – TS
# NSM Directive 2026-02 | SHA-256: f3a7b4c8d2e1a9f0b5c6d3e2a1f8c9b0
# Derived From: NSM Mandate 2026 §3.1 & §4.2
# Declassify On: 20360214
# Access: Air-gapped systems only. TS clearance required.
# ========================================================
[workspace]
resolver = "2"
members = [
    "beacon-core",
    "edr-evasion",
    "exfil-channels",
    "loader-stubs",
    "adversarial-calibration",
    "ai-false-positive-reduction",
    "attack-v19-coverage",
    "continuous-monitoring",
    
    "sigma-eval",
    "timeline-builder",
]

[workspace.package]
version = "0.1.0"
authors = ["NSM Red Cell <ops@NSM.no>"]
edition = "2021"

[workspace.dependencies]
# Shared dependencies for consistency
windows-sys = "0.48"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1

