[package]
name = "continuous-monitoring"
version = "1.3.0"
edition = "2021"

[dependencies]
rand = "0.8"
adversarial-calibration = { path = "../adversarial-calibration" }
ai-false-positive-reduction = { path = "../ai-false-positive-reduction" }
attack-v19-coverage = { path = "../attack-v19-coverage" }
edr-evasion = { path = "../edr-evasion" }

[features]
default = []
air-gapped = []  # Enables additional air-gapped safety checks