 version = "2.0.0-mandate2026"
 description = "NSM Mandate 2026: Covert data exfiltration channels (illustrative stub)"
 edition = "2021"
 license = "NSM-Mandate-2026-Internal"
 repository = "https://git.nsm.no/nsm-internal-tooling/exfil-channels"
 
 # This is an illustrative stub only - full implementation requires air-gapped validation
 [badges]
 nsm-verification = { repository = "nsm-no/nsm-internal-tooling", branch = "main" }
 
 [dependencies]
 aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
 rand = { version = "0.8", default-features = false }
 windows-sys = { version = "0.52", features = [
     "Win32_Foundation",
     "Win32_NetworkManagement_IpHelper",
     "Win32_Networking_WinSock",
     "Win32_Security",
     "Win32_System_Threading",
     "Win32_System_IO",
 ]}
 
 [features]
 default = []
 
-[profile.release]
-opt-level = 3
-debug = false
-debug-assertions = false
-overflow-checks = true
-lto = true
-panic = "abort"
-incremental = false
-codegen-units = 1
-
 # AIR-GAPPED IMPLEMENTATION NOTE: Full implementation would include additional
-# security hardening and compartmentalization features not shown in this stub
\ No newline at end of file
+# security hardening and compartmentalization features not shown in this stub
