// NSM-20260218-002
// FPP Level 5.1 Deterministic Sigma Evaluator (Hardened)
// MITRE ATT&CK v18 detection framework component
// Performance-optimized, air-gapped implementation per NSM Directive 2026-02 ยง4.2

[package]
name = "sigma-eval"
version = "5.1.0"
description = "Deterministic, capability-poor Sigma rule evaluator for NSM defensive research"
license = "MIT"
edition = "2021"
publish = false  # Air-gapped use only per NSM Directive 2026-02

[dependencies]
base64 = "0.21.0"
blake3 = "1.3.0"
lazy_static = "1.4.0"
regex = "1.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.0"
thiserror = "1.0.40"
timeline-builder = { path = "../timeline-builder", version = "1.0.0" }

[dev-dependencies]
rstest = "0.18.0"