# NSM-20260218-002
# FPP Level 5.1 Deterministic Sigma Evaluator (Hardened)
# MITRE ATT&CK v18 detection framework component
# Performance-optimized, air-gapped implementation per NSM Directive 2026-02 ยง4.2

[package]
name = "sigma-eval"
version = "5.1.0"
description = "Deterministic, capability-poor Sigma rule evaluator for NSM defensive research"
license = "MIT"
edition = "2021"
publish = false  # Air-gapped use only per NSM Directive 2026-02

[features]
default = ["full"]
parse = ["dep:serde", "dep:serde_yaml"]
full = [
    "parse",
    "dep:thiserror",
    "dep:base64",
    "dep:blake3",
    "dep:regex",
    "dep:lazy_static",
    "dep:timeline-builder",
    "dep:serde_json",
]

[dependencies]
base64 = "0.21.0"
blake3 = "1.3.0"
lazy_static = "1.4.0"
regex = "1.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.0"
thiserror = "1.0.40"
timeline-builder = { path = "../timeline-builder", version = "1.0.0" }
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.0", optional = true }
thiserror = { version = "1.0.40", optional = true }
base64 = { version = "0.21.0", optional = true }
blake3 = { version = "1.3.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
regex = { version = "1.9.0", optional = true }
serde_json = { version = "1.0", optional = true }
timeline-builder = { path = "../timeline-builder", version = "0.1.0", optional = true }

[dev-dependencies]
rstest = "0.18.0"